fix: [bug/EC-100] increase z-index to hide banner's buttons on header while scrolling page

--- a/src/components/elements/header-default/index.module.scss
+++ b/src/components/elements/header-default/index.module.scss
@@ -2,7 +2,7 @@
 @import "~styles/mixins/mixins.scss";
 
 .header {
-    z-index: 5;
+    z-index: 200;
     position: fixed;
     left: 0;
     right: 0;
